--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<!--     <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>London</title>
 
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
@@ -23,13 +23,31 @@
 
         <!-- <a-sound src="/Audio/bensound-cute.mp3" autoplay="true"></a-sound> -->
 
-        <a-sky src="/image/fire01.jpg"></a-sky>
+        
         <!-- <a-ocean width="100" depth="100" density="40"></a-ocean> -->
 
-       
+        <section class="container">
+            <!-- <div id="element">
+                    <div class="elements">
+                        <img src="image/wrensplanandviews.jpg" class="picture" alt="">
+                    </div>
+                    <div class="elements">
+                        <h2>London in 1666</h2>
+                    </div>
+                    <div class="elements">
+                        <p>About 350,000 people lived in London just before the Great Fire, it was one of the largest cities in Europe.</p><br>
+                    </div>
+                    <div class="elements btn">
+                        <a href="javascript:history.back()">
+                            <h2>Close</h2>
+                        </a>
+                    </div>
+                </div> -->
+        </section>
         <a-camera>
             <a-cursor  scale="0 0 0"></a-cursor>
         </a-camera>
+        <a-sky src="/image/fire01.jpg"></a-sky>
 
     </a-scene>
 
