--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <!-- <a-sound src="/Audio/bensound-cute.mp3" autoplay="true"></a-sound> -->
 
-        <a-sky src="image/fire01.jpg"></a-sky>
+        <a-sky src="./image/fire01.jpg"></a-sky>
         <!-- <a-ocean width="100" depth="100" density="40"></a-ocean> -->
 
         <section class="container">
