--- a/index.html
+++ b/index.html
@@ -19,11 +19,18 @@
 
 
     <a-scene embedded arjs>
+        <a-assets>
+            <!-- Images. -->
+            <img id="london360" src="./image/fire01.jpg">
+          </a-assets>
+        
+          <!-- 360-degree image. -->
+          <a-sky id="image-360" radius="10" src="#london360"></a-sky>
 
 
         <!-- <a-sound src="/Audio/bensound-cute.mp3" autoplay="true"></a-sound> -->
 
-        <a-sky src="./image/fire01.jpg"></a-sky>
+        <!-- <a-sky src="/image/fire01.jpg"></a-sky> -->
         <!-- <a-ocean width="100" depth="100" density="40"></a-ocean> -->
 
         <section class="container">
