--- a/after-locations-map.html
+++ b/after-locations-map.html
@@ -39,13 +39,13 @@
     <section class="text title">
         <div>
             <div>
-                <h2><b>Map</b> of London After the Fire</h2>
+                <h2>Map of london after the fire</h2>
             </div>
         </div>
     </section>
 
 
-    <a-scene embedded arjs>
+    <a-scene vr-mode-ui="enabled: false" embedded arjs>
         <a-marker preset="hiro">
 
             <a-sphere color="#A11B1B" radius="0.7" position="0 0 0" scale="0.5 0.5 0.5" theta-length="90" opacity="0.9"
