--- a/before-locations-map.html
+++ b/before-locations-map.html
@@ -39,7 +39,7 @@
     <section class="text title">
         <div>
             <div>
-                <h2><b>Map</b> of London Before the Fire</h2>
+                <h2>Map of London before the fire</h2>
             </div>
 
 
@@ -47,7 +47,7 @@
     </section>
 
     
-    <a-scene embedded arjs>
+    <a-scene vr-mode-ui="enabled: false" embedded arjs>
         <!-- <a-camera id="camera" position="0 2 0">
             <a-cursor></a-cursor>
         </a-camera> -->
