--- a/cause.html
+++ b/cause.html
@@ -40,13 +40,13 @@
     <section class="text title">
         <div>
             <div>
-                <h2>The <b>Beginning</b></h2>
+                <h2>The beginning</h2>
             </div>
 
 
         </div>
     </section>
-    <a-scene embedded arjs>
+    <a-scene vr-mode-ui="enabled: false" embedded arjs>
 
 
         <a-marker preset="hiro">
