--- a/day-01.html
+++ b/day-01.html
@@ -31,7 +31,7 @@
 
     <link rel="stylesheet" href="style-ar.css">
 
-    <script src="./script-ar.js"></script>
+    <!-- <script src="./script-ar.js"></script> -->
 
 </head>
 <body>
@@ -39,14 +39,14 @@
     <section class="text title">
         <div>
             <div>
-                <h2>Day <b>One</b></h2>
+                <h2>Day one</h2>
             </div>
 
 
         </div>
     </section>
     
-    <a-scene embedded arjs>
+    <a-scene vr-mode-ui="enabled: false" embedded arjs>
 
         
         <a-marker preset="hiro">
