--- a/day-02.html
+++ b/day-02.html
@@ -41,13 +41,13 @@
     <section class="text title">
         <div>
             <div>
-                <h2>Day <b>Two</b></h2>
+                <h2>Day two</h2>
             </div>
 
 
         </div>
     </section>
-    <a-scene embedded arjs>
+    <a-scene vr-mode-ui="enabled: false" embedded arjs>
 
 
 
