--- a/day-03-04-05.html
+++ b/day-03-04-05.html
@@ -41,13 +41,13 @@
     <section class="text title">
         <div>
             <div>
-                <h2>Day <b>Three</b>, <b>Four</b>, and <b>Five</b></h2>
+                <h2>Day threet, four, and five</h2>
             </div>
 
 
         </div>
     </section>
-    <a-scene embedded arjs>
+    <a-scene vr-mode-ui="enabled: false" embedded arjs>
 
 
 
