--- a/instruction.html
+++ b/instruction.html
@@ -19,13 +19,14 @@
             <!-- <div class="elements">
                 <h2>Explore The Great Fire of London through Augmented Reality.</h2>
             </div> -->
-            <div class="elements">
-                <h2>Keep the marker within the field of view.</h2>
-                <!-- <p>keep the Hiro marker within your view.</p><br><br> -->
-            </div>
+            
             <div class="elements">
                 <img src="image/instruction.png" class="instruction" alt=""><br><br>
             </div>
+            <div class="elements">
+                <h2>Keep the marker within the field of view.</h2>
+                <!-- <p>keep the Hiro marker within your view.</p><br><br> -->
+            </div><br>
             <div class="elements btn">
                 <a href="index.html">
                     <h2>Back</h2>
