--- a/instruction02.html
+++ b/instruction02.html
@@ -20,12 +20,16 @@
                 <h2>Explore The Great Fire of London through Augmented Reality.</h2>
             </div> -->
             <div class="elements">
-                <h2>Point at the red labels and touch anywhere on the screen to read more.</h2>
+                <!-- <h2>Point at the red labels and touch anywhere on the screen to read more.</h2> -->
                 <!-- <p>keep the Hiro marker within your view.</p><br><br> -->
             </div>
             <div class="elements">
-                <img src="image/instruction02.png" class="instruction instruction02" alt=""><br><br>
+                <img src="image/instruction02.png" class="instruction" alt="">
             </div>
+            <div class="elements">
+                <h2>Yellow ring on the red box and then tap anywhere on the screen.</h2>
+                <!-- <p>keep the Hiro marker within your view.</p><br><br> -->
+            </div><br>
             <div class="elements btn">
                 <a href="instruction.html">
                     <h2>Back</h2>
