--- a/after-locations.html
+++ b/after-locations.html
@@ -46,13 +46,13 @@
     <section class="text title">
         <div>
             <div>
-                <h2>Key <b>Locations</b> After the Fire</h2>
+                <h2>Key locations after the fire</h2>
             </div>
         </div>
     </section>
 
 
-    <a-scene embedded arjs>
+    <a-scene vr-mode-ui="enabled: false" embedded arjs>
 
         <a-marker preset="hiro">
             <a-sphere color="#A11B1B" radius="0.7" position="0 0 0" scale="0.5 0.5 0.5" theta-length="90" opacity="0.9"
