--- a/index.html
+++ b/index.html
@@ -18,41 +18,21 @@
 
 
 
-    <a-scene embedded arjs>
+    <a-scene vr-mode-ui="enabled: false" embedded arjs>
         <a-assets>
             <!-- Images. -->
             <img id="london360" src="./image/fire01.jpg">
-          </a-assets>
-        
-          <!-- 360-degree image. -->
-          <a-sky id="image-360" radius="10" src="#london360"></a-sky>
+        </a-assets>
 
+        <!-- 360-degree image. -->
+        <a-sky id="image-360" radius="10" src="#london360"></a-sky>
 
-        <!-- <a-sound src="/Audio/bensound-cute.mp3" autoplay="true"></a-sound> -->
-
-        <!-- <a-sky src="/image/fire01.jpg"></a-sky> -->
-        <!-- <a-ocean width="100" depth="100" density="40"></a-ocean> -->
 
         <section class="container">
-            <!-- <div id="element">
-                    <div class="elements">
-                        <img src="image/wrensplanandviews.jpg" class="picture" alt="">
-                    </div>
-                    <div class="elements">
-                        <h2>London in 1666</h2>
-                    </div>
-                    <div class="elements">
-                        <p>About 350,000 people lived in London just before the Great Fire, it was one of the largest cities in Europe.</p><br>
-                    </div>
-                    <div class="elements btn">
-                        <a href="javascript:history.back()">
-                            <h2>Close</h2>
-                        </a>
-                    </div>
-                </div> -->
+
         </section>
         <a-camera>
-            <a-cursor  scale="0 0 0"></a-cursor>
+            <a-cursor scale="0 0 0"></a-cursor>
         </a-camera>
 
     </a-scene>
@@ -64,15 +44,14 @@
                 <h2 class="head">The Great Fire of London</h2>
             </div>
             <div>
-                <p class="info">In 1666, a devastating fire swept through London, destroying 13,200 houses, 87 parish churches, The
-                    Royal Exchange, Guildhall and St. Paul’s Cathedral.</p>
+                <p class="info">In 1666, a devastating fire swept through London, destroying 13,200 houses, 87 parish
+                    churches, The Royal Exchange, Guildhall and St. Paul’s Cathedral.</p>
             </div>
             <div>
-                <a href="./instruction.html">
+                <a href="instruction.html">
                     <h2>Next</h2>
                 </a>
             </div>
-
         </div>
     </section>
 
