--- a/monument02.html
+++ b/monument02.html
@@ -18,7 +18,7 @@
 
 
 
-    <a-scene embedded arjs>
+    <a-scene vr-mode-ui="enabled: false" embedded arjs>
 
         <a-assets>
             <!-- Images. -->
