--- a/after-locations-map.html
+++ b/after-locations-map.html
@@ -123,6 +123,16 @@
                 </a-entity>
             </a-entity>
 
+            <a-sphere color="#FFBA05" radius="0.3" position="1.3 -0.2 -1" scale="0.5 0.5 0.5" theta-length="90"
+            opacity="0.8">
+        </a-sphere>
+        <a-cylinder color="#FFBA05" height="0.5" radius="0.01" position="1.3 0.25 -1"></a-cylinder>
+        <a-entity class="london-bridge" rotation="0 45 0" position="1.3 0.8 -1" look-at="#camera" scale="0.7 0.7 0.7">
+            <a-box opacity="0.9" width="0.8" height="0.5" depth="0.01" position="0 0 -0.5" color="#FFBA05"></a-box>
+            <a-entity text="value: London Bridge; color: white; wrapCount: 10; font:dejavu; align: center">
+            </a-entity>
+        </a-entity>
+
 
 
             <a-image src="image/after.png" rotation="-90 -10 10" width="6" height="3.9" opacity="0.9"
@@ -143,7 +153,7 @@
                 <h2><a href="after-locations.html">Back</a></h2>
             </div>
             <div>
-                <h2><a href="end.html">Next</a></h2>
+                <h2><a href="monument360Ending.html">Next</a></h2>
             </div>
         </div>
     </section>
