--- a/london-after-map.html
+++ b/london-after-map.html
@@ -14,7 +14,7 @@
     <section class="container">
         <div id="element">
             <div class="elements">
-                <img src="image/after.png" class="picture" alt="">
+                <img src="image/afterFlat.png" class="picture" alt="">
             </div>
             <div class="elements">
                 <h2>Map of London after the fire</h2>
