--- a/london-bridge.html
+++ b/london-bridge.html
@@ -5,25 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phoenix</title>
+    <title>Bridge</title>
 
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <section class="container phoenix">
+    <section class="container">
         <div id="element">
             <div class="elements">
-                <img src="image/phoenix.jpg" class="picture" alt="">
+                <img src="image/london-bridge.jpg" class="picture" alt="">
             </div>
             <div class="elements">
-                <h2>Phoenix Fire Insurance Company</h2>
+                <h2>London Bridge</h2>
             </div>
             <div class="elements">
-                <p>The company was also known at one time as Phoenix Assurance, which was established in 1680, the name
-                    of Phoenix fire office was established 1782. The Phoenix fire head office was based in Lombard
-                    Street and Charing Cross Street in London. the company was purchased by Sun Alliance & London in
-                    1984.</p>
+                <p>Samuel Pepys ascended the Tower of London on Sunday morning to view the fire from the battlements. He
+                    recorded in his diary that the eastern gale had turned it into a conflagration. It had burned down
+                    an estimated 300 houses and reached the riverfront. The houses on London Bridge were burning.</p>
+                <br>
             </div>
             <div class="elements btn">
                 <a href="javascript:history.back()">
