--- a/london.html
+++ b/london.html
@@ -52,7 +52,7 @@
                 </div> -->
             </section>
             <a-camera>
-                <a-cursor raycaster="objects: a-box"></a-cursor>
+                <a-cursor scale="0 0 0"></a-cursor>
             </a-camera>
 
     </a-scene>
