--- a/monument360Ending.html
+++ b/monument360Ending.html
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style-ar.css">
+
 </head>
 
 <body>
@@ -23,10 +24,10 @@
         <a-assets>
             <!-- Images. -->
             <img id="london360" src="./image/ending.jpg">
-          </a-assets>
-        
-          <!-- 360-degree image. -->
-          <a-sky id="image-360" radius="10" src="#london360"></a-sky>
+        </a-assets>
+
+        <!-- 360-degree image. -->
+        <a-sky id="image-360" radius="10" src="#london360"></a-sky>
 
 
         <!-- <a-sound src="/Audio/bensound-cute.mp3" autoplay="true"></a-sound> -->
@@ -62,17 +63,21 @@
     <section class="text nav three60section">
         <div class="nav-child01 three60">
             <div>
-                <h2 class="head">The Monument</h2>
+                <div class="elements">
+                    <h2>"Congratulations, you have finished the tour."</h2>
+
+                </div>
             </div>
-            <div>
-                <p class="info">In all, Wren oversaw the rebuilding of 52 churches, 36 company halls, and the memorial to the great
-                    fire, Monument.</p>
-            </div>
-            <div>
-                <a href="javascript:history.back()">
-                    <h2>Close</h2>
-                </a>
-            </div>
+        
+        </div>
+        <div class="elements btn">
+            <a href="after-locations-map.html">
+                <h2>Back</h2>
+            </a>
+            <a href="index.html">
+                <h2>Start Over</h2>
+            </a>
+        </div>
 
         </div>
     </section>
