--- a/seething-lane.html
+++ b/seething-lane.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <section class="container">
+    <section class="container pepys">
         <div id="element">
             <div class="elements">
                 <img src="image/pepys.jpg" class="picture" alt="">
@@ -20,7 +20,14 @@
                 <h2>Diarist Samuel Pepys</h2>
             </div>
             <div class="elements">
-                <p>Pepys’ home was located in Seething Lane</p><br>
+                <p>Samuel Pepys was an English diarist and naval administrator. He served as administrator of the Navy
+                    of England and Member of Parliament and is most famous for the diary he kept for a decade while
+                    still a young man.<br>
+                    The detailed private diary that Pepys kept from 1660 until 1669 was first published in the 19th
+                    century and is one of the most important primary sources for the English Restoration period. It
+                    provides a combination of personal revelation and eyewitness accounts of great events, such as the
+                    Great Plague of London, the Second Dutch War, and the Great Fire of London.<br>
+                    Pepys’ home was located in Seething Lane.</p>
             </div>
             <div class="elements btn">
                 <a href="javascript:history.back()">
