--- a/cause.html
+++ b/cause.html
@@ -51,7 +51,7 @@
 
         <a-marker preset="hiro">
 
-   
+
 
 
             <a-sphere color="#A11B1B" radius="0.5" position="1.50 -0.2 -1.45" scale="0.5 0.5 0.5" theta-length="90"
@@ -67,8 +67,75 @@
                 </a-entity>
             </a-entity>
 
+            <a-sphere color="#FFBA05" radius="0.3" position="2.9 -0.2 -0.8" scale="0.5 0.5 0.5" theta-length="90"
+                opacity="0.8">
+            </a-sphere>
+            <a-cylinder color="#FFBA05" height="0.5" radius="0.01" position="2.9 0.25 -0.8"></a-cylinder>
+            <a-entity class="tower" rotation="0 45 0" position="2.9 0.8 -0.8" look-at="#camera" scale="0.7 0.7 0.7">
+                <a-box opacity="0.9" width="0.9" height="0.5" depth="0.01" position="0 0 -0.5" color="#FFBA05"></a-box>
+                <a-entity text="value: Tower of London; color: white; wrapCount: 10; font:dejavu; align: center">
+                </a-entity>
+            </a-entity>
 
-            <a-sphere color="#A11B1B" radius="0.5" position="2.15 -0.2 -1.4" scale="0.5 0.5 0.5" theta-length="90"
+
+            <a-sphere color="#FFBA05" radius="0.3" position="2.5 -0.2 -1.3" scale="0.5 0.5 0.5" theta-length="90"
+                opacity="0.8">
+            </a-sphere>
+            <a-cylinder color="#FFBA05" height="0.5" radius="0.01" position="2.5 0.25 -1.3"></a-cylinder>
+            <a-entity class="seething-lane" rotation="0 45 0" position="2.5 0.8 -1.3" look-at="#camera"
+                scale="0.7 0.7 0.7">
+                <a-box opacity="0.9" width="0.9" height="0.5" depth="0.01" position="0 0 -0.5" color="#FFBA05"></a-box>
+                <a-entity text="value: Seething Lane; color: white; wrapCount: 10; font:dejavu; align: center">
+                </a-entity>
+            </a-entity>
+
+
+            <a-sphere color="#FFBA05" radius="0.3" position="1.25 -0.2 -2.15" scale="0.5 0.5 0.5" theta-length="90"
+                opacity="0.8">
+            </a-sphere>
+            <a-cylinder color="#FFBA05" height="0.5" radius="0.01" position="1.25 0.25 -2.15"></a-cylinder>
+            <a-entity class="royal-exchange" rotation="0 45 0" position="1.25 0.8 -2.15" look-at="#camera"
+                scale="0.7 0.7 0.7">
+                <a-box opacity="0.9" width="0.9" height="0.5" depth="0.01" position="0 0 -0.5" color="#FFBA05"></a-box>
+                <a-entity text="value: Royal Exchange; color: white; wrapCount: 10; font:dejavu; align: center">
+                </a-entity>
+            </a-entity>
+
+
+            <a-sphere color="#FFBA05" radius="0.3" position="-0.1 -0.2 -2.1" scale="0.5 0.5 0.5" theta-length="90"
+                opacity="0.8">
+            </a-sphere>
+            <a-cylinder color="#FFBA05" height="0.5" radius="0.01" position="-0.1 0.25 -2.1"></a-cylinder>
+            <a-entity class="st-paul" rotation="0 45 0" position="-0.1 0.8 -2.1" look-at="#camera" scale="0.7 0.7 0.7">
+                <a-box opacity="0.9" width="1" height="0.5" depth="0.01" position="0 0 -0.5" color="#FFBA05"></a-box>
+                <a-entity text="value: St Paul Cathedral; color: white; wrapCount: 10; font:dejavu; align: center">
+                </a-entity>
+            </a-entity>
+
+            <a-sphere color="#FFBA05" radius="0.3" position="1.1 -0.2 -1.1" scale="0.5 0.5 0.5" theta-length="90"
+                opacity="0.8">
+            </a-sphere>
+            <a-cylinder color="#FFBA05" height="0.5" radius="0.01" position="1.1 0.25 -1.1"></a-cylinder>
+            <a-entity class="london-bridge" rotation="0 45 0" position="1.1 0.8 -1.1" look-at="#camera"
+                scale="0.7 0.7 0.7">
+                <a-box opacity="0.9" width="0.8" height="0.5" depth="0.01" position="0 0 -0.5" color="#FFBA05"></a-box>
+                <a-entity text="value: London Bridge; color: white; wrapCount: 10; font:dejavu; align: center">
+                </a-entity>
+            </a-entity>
+
+
+            <a-sphere color="#FFBA05" radius="0.3" position="-4.8 -0.2 -0.2" scale="0.5 0.5 0.5" theta-length="90"
+                opacity="0.8">
+            </a-sphere>
+            <a-entity class="whitehall" rotation="0 45 0" position="-4.8 0.5 -0.2" look-at="#camera"
+                scale="0.7 0.7 0.7">
+                <a-box opacity="0.9" width="1" height="0.35" depth="0.01" position="0 0 -0.5" color="#FFBA05"></a-box>
+                <a-entity text="value: Whitehall; color: white; wrapCount: 10; font:dejavu; align: center">
+                </a-entity>
+            </a-entity>
+
+
+            <!-- <a-sphere color="#A11B1B" radius="0.5" position="2.15 -0.2 -1.4" scale="0.5 0.5 0.5" theta-length="90"
                 opacity="0.9" segments-height="100" segments-width="100" wireframe="true"
                 animation__opa="property: material.opacity; from: 0; to: 0.5; dur: 500; loop: true; dir: alternate">
             </a-sphere>
@@ -79,7 +146,7 @@
                 <a-box opacity="0.9" width="0.9" height="0.5" depth="0.01" position="0 0 -0.5" color="#A11B1B"></a-box>
                 <a-entity text="value: Seething Lane; color: white; wrapCount: 10; font:dejavu; align: center">
                 </a-entity>
-            </a-entity>
+            </a-entity> -->
 
         </a-marker>
 
@@ -104,15 +171,15 @@
 
 </body>
 <script>
-    document.querySelector('.seething-lane')
-.addEventListener('mousedown', e => {
-    location.href = "seething-lane.html";
-});
+    //     document.querySelector('.seething-lane')
+    // .addEventListener('mousedown', e => {
+    //     location.href = "seething-lane.html";
+    // });
 
-document.querySelector('.pudding-lane')
-.addEventListener('mousedown', e => {
-    location.href = "pudding-lane.html";
-});
+    document.querySelector('.pudding-lane')
+        .addEventListener('mousedown', e => {
+            location.href = "pudding-lane.html";
+        });
 </script>
 
 </html>
