--- a/new-st-paul02.html
+++ b/new-st-paul02.html
@@ -53,7 +53,7 @@
                 </div> -->
         </section>
         <a-camera>
-            <a-cursor raycaster="objects: a-box"></a-cursor>
+            <a-cursor scale="0 0 0"></a-cursor>
         </a-camera>
 
     </a-scene>
