--- a/day-03-04-05.html
+++ b/day-03-04-05.html
@@ -41,7 +41,7 @@
     <section class="text title">
         <div>
             <div>
-                <h2>Day threet, four, and five</h2>
+                <h2>Day three, four, and five</h2>
             </div>
 
 
