--- a/instruction.html
+++ b/instruction.html
@@ -21,7 +21,8 @@
             </div> -->
             
             <div class="elements">
-                <img src="image/instruction.png" class="instruction" alt=""><br><br>
+                <!-- <img src="image/instruction.png" class="instruction" alt=""><br><br> -->
+                <img src="image/instruction01.gif" class="instruction" alt=""><br><br>
             </div>
             <div class="elements">
                 <h2>Keep the marker within the field of view.</h2>
