--- a/instruction02.html
+++ b/instruction02.html
@@ -24,10 +24,10 @@
                 <!-- <p>keep the Hiro marker within your view.</p><br><br> -->
             </div>
             <div class="elements">
-                <img src="image/instruction02.png" class="instruction" alt="">
+                <img src="image/instruction02.gif" class="instruction" alt="">
             </div>
             <div class="elements">
-                <h2>Yellow ring on the red box and then tap anywhere on the screen.</h2>
+                <h2>Yellow ring on the red circle and then tap anywhere on the screen for more information.</h2>
                 <!-- <p>keep the Hiro marker within your view.</p><br><br> -->
             </div><br>
             <div class="elements btn">
