--- a/after-locations-map.html
+++ b/after-locations-map.html
@@ -48,47 +48,55 @@
     <a-scene vr-mode-ui="enabled: false" embedded arjs>
         <a-marker preset="hiro">
 
-            <a-sphere color="#A11B1B" radius="0.7" position="0 0 0" scale="0.5 0.5 0.5" theta-length="90" opacity="0.9"
+            <!-- <a-sphere color="#A11B1B" radius="0.7" position="0 0 0" scale="0.5 0.5 0.5" theta-length="90" opacity="0.9"
                 segments-height="100" segments-width="100" wireframe="true"
                 animation__opa="property: material.opacity; from: 0; to: 0.5; dur: 500; loop: true; dir: alternate">
-            </a-sphere>
-            <a-cylinder color="#A11B1B" height="0.5" radius="0.01" position="0 0.25 0"></a-cylinder>
-            <a-entity class="london" rotation="0 45 0" position="0 0.8 0" look-at="#camera" scale="0.7 0.7 0.7"
+            </a-sphere> -->
+            <!-- <a-cylinder color="#A11B1B" height="0.5" radius="0.01" position="0 0.25 0"></a-cylinder> -->
+            <a-entity class="london" rotation="0 45 0" position="0 0.2 0" look-at="#camera" scale="0.7 0.7 0.7"
                 event-set__scale01="_event: mouseenter; scale: 1.2 1.2 1.2"
                 event-set__scale02="_event: mouseleave; scale: 0.5 0.5 0.5">
-                <a-box opacity="0.9" width="1.1" height="0.9" depth="0.01" position="0 0 -0.5" color="#A11B1B"></a-box>
+                <!-- <a-box opacity="0.9" width="1.1" height="0.9" depth="0.01" position="0 0 -0.5" color="#A11B1B"></a-box> -->
+                <a-cylinder position="0 0 -0.5" radius="0.6" rotation="0 90 90" height="0.2" color="#A11B1B"
+                opacity="0.8"></a-cylinder>
                 <a-entity
                     text="value: Map of London after the Fire; color: white; wrapCount: 10; font:dejavu; align: center">
                 </a-entity>
             </a-entity>
 
-            <a-sphere color="#FFBA05" radius="0.3" position="-0.1 -0.2 -2.1" scale="0.5 0.5 0.5" theta-length="90"
+            <!-- <a-sphere color="#FFBA05" radius="0.3" position="-0.1 -0.2 -2.1" scale="0.5 0.5 0.5" theta-length="90"
                 opacity="0.8">
-            </a-sphere>
-            <a-cylinder color="#FFBA05" height="0.5" radius="0.01" position="-0.1 0.25 -2.1"></a-cylinder>
-            <a-entity class="st-paul" rotation="0 45 0" position="-0.1 0.8 -2.1" look-at="#camera" scale="0.7 0.7 0.7">
-                <a-box opacity="0.9" width="1" height="0.7" depth="0.01" position="0 0 -0.5" color="#FFBA05"></a-box>
+            </a-sphere> -->
+            <!-- <a-cylinder color="#FFBA05" height="0.5" radius="0.01" position="-0.1 0.25 -2.1"></a-cylinder> -->
+            <a-entity class="st-paul" rotation="0 45 0" position="-0.1 0.2 -2.1" look-at="#camera" scale="0.7 0.7 0.7">
+                <!-- <a-box opacity="0.9" width="1" height="0.7" depth="0.01" position="0 0 -0.5" color="#FFBA05"></a-box> -->
+                <a-cylinder position="0 0 -0.5" radius="0.6" rotation="0 90 90" height="0.2" color="#808080"
+                opacity="0.8"></a-cylinder>
                 <a-entity text="value: New St Paul Cathedral; color: white; wrapCount: 10; font:dejavu; align: center">
                 </a-entity>
             </a-entity>
 
-            <a-sphere color="#FFBA05" radius="0.3" position="1.50 -0.2 -1.45" scale="0.5 0.5 0.5" theta-length="90"
+            <!-- <a-sphere color="#FFBA05" radius="0.3" position="1.50 -0.2 -1.45" scale="0.5 0.5 0.5" theta-length="90"
                 opacity="0.8">
-            </a-sphere>
-            <a-cylinder color="#FFBA05" height="0.5" radius="0.01" position="1.50 0.25 -1.45"></a-cylinder>
-            <a-entity class="the-monument" rotation="0 45 0" position="1.50 0.8 -1.45" look-at="#camera"
+            </a-sphere> -->
+            <!-- <a-cylinder color="#FFBA05" height="0.5" radius="0.01" position="1.50 0.25 -1.45"></a-cylinder> -->
+            <a-entity class="the-monument" rotation="0 45 0" position="1.50 0.2 -1.45" look-at="#camera"
                 scale="0.7 0.7 0.7">
-                <a-box opacity="0.9" width="0.8" height="0.5" depth="0.01" position="0 0 -0.5" color="#FFBA05"></a-box>
+                <!-- <a-box opacity="0.9" width="0.8" height="0.5" depth="0.01" position="0 0 -0.5" color="#FFBA05"></a-box> -->
+                <a-cylinder position="0 0 -0.5" radius="0.6" rotation="0 90 90" height="0.2" color="#808080"
+                opacity="0.8"></a-cylinder>
                 <a-entity text="value: The Monument; color: white; wrapCount: 10; font:dejavu; align: center">
                 </a-entity>
             </a-entity>
 
-            <a-sphere color="#FFBA05" radius="0.3" position="-3.5 -0.2 -0.7" scale="0.5 0.5 0.5" theta-length="90"
+            <!-- <a-sphere color="#FFBA05" radius="0.3" position="-3.5 -0.2 -0.7" scale="0.5 0.5 0.5" theta-length="90"
                 opacity="0.8">
-            </a-sphere>
-            <a-entity class="phoenix" rotation="0 45 0" position="-3.5 0.6 -0.7" look-at="#camera" scale="0.7 0.7 0.7">
-                <a-box opacity="0.9" width="1" height="1" depth="0.01" position="0 0 -0.5" color="#FFBA05"></a-box>
-                <a-image src="image/phoenix.jpg" width="1" height="1.333" opacity="1" position="0 1.2 -0.8"></a-image>
+            </a-sphere> -->
+            <a-entity class="phoenix" rotation="0 45 0" position="-3.5 0.2 -0.7" look-at="#camera" scale="0.7 0.7 0.7">
+                <!-- <a-box opacity="0.9" width="1" height="1" depth="0.01" position="0 0 -0.5" color="#FFBA05"></a-box> -->
+                <a-cylinder position="0 0 -0.5" radius="0.6" rotation="0 90 90" height="0.2" color="#808080"
+                opacity="0.8"></a-cylinder>
+                <!-- <a-image src="image/phoenix.jpg" width="1" height="1.333" opacity="1" position="0 1.2 -0.8"></a-image> -->
                 <a-entity
                     text="value: Phoenix Fire Insurance Company; color: white; wrapCount: 10; font:dejavu; align: center">
                 </a-entity>
@@ -97,38 +105,42 @@
 
 
 
-            <a-sphere color="#FFBA05" radius="0.3" position="1.45 -0.2 -2" scale="0.5 0.5 0.5" theta-length="90"
+            <!-- <a-sphere color="#FFBA05" radius="0.3" position="1.45 -0.2 -2" scale="0.5 0.5 0.5" theta-length="90"
                 opacity="0.8">
-            </a-sphere>
-            <a-cylinder color="#FFBA05" height="0.5" radius="0.01" position="1.45 0.25 -2"></a-cylinder>
-            <a-entity class="sun-fire-office" rotation="0 45 0" position="1.45 0.8 -2" look-at="#camera"
+            </a-sphere> -->
+            <!-- <a-cylinder color="#FFBA05" height="0.5" radius="0.01" position="1.45 0.25 -2"></a-cylinder> -->
+            <a-entity class="sun-fire-office" rotation="0 45 0" position="1.45 0.2 -2" look-at="#camera"
                 scale="0.7 0.7 0.7">
-                <a-box opacity="0.9" width="0.8" height="0.5" depth="0.01" position="0 0 -0.5" color="#FFBA05"></a-box>
-                <a-image src="image/Sun-insurance-company-firemark.jpg" width="1" height="1" opacity="1"
-                    position="0 0.75 -0.8"></a-image>
+                <!-- <a-box opacity="0.9" width="0.8" height="0.5" depth="0.01" position="0 0 -0.5" color="#FFBA05"></a-box> -->
+                <a-cylinder position="0 0 -0.5" radius="0.6" rotation="0 90 90" height="0.2" color="#808080"
+                opacity="0.8"></a-cylinder>
+                <!-- <a-image src="image/Sun-insurance-company-firemark.jpg" width="1" height="1" opacity="1"
+                    position="0 0.75 -0.8"></a-image> -->
                 <a-entity text="value: Sun Fire Office; color: white; wrapCount: 10; font:dejavu; align: center">
                 </a-entity>
             </a-entity>
 
-            <a-sphere color="#FFBA05" radius="0.3" position="2.6 -0.2 -1.1" scale="0.5 0.5 0.5" theta-length="90"
+            <!-- <a-sphere color="#FFBA05" radius="0.3" position="2.6 -0.2 -1.1" scale="0.5 0.5 0.5" theta-length="90"
                 opacity="0.9" segments-height="100" segments-width="100" wireframe="true"
                 animation__opa="property: material.opacity; from: 0; to: 0.5; dur: 500; loop: true; dir: alternate">
-            </a-sphere>
-            <a-cylinder color="#FFBA05" height="0.5" radius="0.01" position="2.6 0.25 -1.1"></a-cylinder>
-            <a-entity class="tower" rotation="0 45 0" position="2.6 0.8 -1.1" look-at="#camera" scale="0.7 0.7 0.7"
-                event-set__scale01="_event: mouseenter; scale: 1.2 1.2 1.2"
-                event-set__scale02="_event: mouseleave; scale: 0.5 0.5 0.5">
-                <a-box opacity="0.9" width="0.9" height="0.5" depth="0.01" position="0 0 -0.5" color="#FFBA05"></a-box>
+            </a-sphere> -->
+            <!-- <a-cylinder color="#FFBA05" height="0.5" radius="0.01" position="2.6 0.25 -1.1"></a-cylinder> -->
+            <a-entity class="tower" rotation="0 45 0" position="2.6 0.2 -1.1" look-at="#camera" scale="0.7 0.7 0.7">
+                <!-- <a-box opacity="0.9" width="0.9" height="0.5" depth="0.01" position="0 0 -0.5" color="#FFBA05"></a-box> -->
+                <a-cylinder position="0 0 -0.5" radius="0.6" rotation="0 90 90" height="0.2" color="#808080"
+                opacity="0.8"></a-cylinder>
                 <a-entity text="value: Tower of London; color: white; wrapCount: 10; font:dejavu; align: center">
                 </a-entity>
             </a-entity>
 
-            <a-sphere color="#FFBA05" radius="0.3" position="1.3 -0.2 -1" scale="0.5 0.5 0.5" theta-length="90"
+            <!-- <a-sphere color="#FFBA05" radius="0.3" position="1.3 -0.2 -1" scale="0.5 0.5 0.5" theta-length="90"
             opacity="0.8">
-        </a-sphere>
-        <a-cylinder color="#FFBA05" height="0.5" radius="0.01" position="1.3 0.25 -1"></a-cylinder>
-        <a-entity class="london-bridge" rotation="0 45 0" position="1.3 0.8 -1" look-at="#camera" scale="0.7 0.7 0.7">
-            <a-box opacity="0.9" width="0.8" height="0.5" depth="0.01" position="0 0 -0.5" color="#FFBA05"></a-box>
+        </a-sphere> -->
+        <!-- <a-cylinder color="#FFBA05" height="0.5" radius="0.01" position="1.3 0.25 -1"></a-cylinder> -->
+        <a-entity class="london-bridge" rotation="0 45 0" position="1.3 0.2 -1" look-at="#camera" scale="0.7 0.7 0.7">
+            <!-- <a-box opacity="0.9" width="0.8" height="0.5" depth="0.01" position="0 0 -0.5" color="#FFBA05"></a-box> -->
+            <a-cylinder position="0 0 -0.5" radius="0.6" rotation="0 90 90" height="0.2" color="#808080"
+                opacity="0.8"></a-cylinder>
             <a-entity text="value: London Bridge; color: white; wrapCount: 10; font:dejavu; align: center">
             </a-entity>
         </a-entity>
@@ -136,7 +148,7 @@
 
 
             <a-image src="image/after.png" rotation="-90 -10 10" width="6" height="3.9" opacity="0.9"
-                position="0.65 -0.2 -2.3"></a-image>
+                position="0.65 -0.5 -2.3"></a-image>
 
         </a-marker>
 
