--- a/after-locations.html
+++ b/after-locations.html
@@ -5,8 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<!--     <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-<!--     <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=5.0, minimum-scale=0.86"> -->
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=5.0, minimum-scale=0.86"> -->
     <title>Key Locations After The Fire</title>
 
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
@@ -56,54 +55,62 @@
     <a-scene vr-mode-ui="enabled: false" embedded arjs>
 
         <a-marker preset="hiro">
-            <a-sphere color="#A11B1B" radius="0.7" position="0 0 0" scale="0.5 0.5 0.5" theta-length="90" opacity="0.9"
+            <!-- <a-sphere color="#A11B1B" radius="0.7" position="0 0 0" scale="0.5 0.5 0.5" theta-length="90" opacity="0.9"
                 segments-height="100" segments-width="100" wireframe="true"
                 animation__opa="property: material.opacity; from: 0; to: 0.5; dur: 500; loop: true; dir: alternate">
-            </a-sphere>
-            <a-cylinder color="#A11B1B" height="0.5" radius="0.01" position="0 0.25 0"></a-cylinder>
-            <a-entity class="london" rotation="0 45 0" position="0 0.8 0" look-at="#camera" scale="0.7 0.7 0.7"
+            </a-sphere> -->
+            <!-- <a-cylinder color="#A11B1B" height="0.5" radius="0.01" position="0 0.25 0"></a-cylinder> -->
+            <a-entity class="london" rotation="0 45 0" position="0 0 0" look-at="#camera" scale="0.7 0.7 0.7"
                 event-set__scale01="_event: mouseenter; scale: 1.2 1.2 1.2"
                 event-set__scale02="_event: mouseleave; scale: 0.5 0.5 0.5">
-                <a-box opacity="0.9" width="1.1" height="0.7" depth="0.01" position="0 0 -0.5" color="#A11B1B"></a-box>
+                <!-- <a-box opacity="0.9" width="1.1" height="0.7" depth="0.01" position="0 0 -0.5" color="#A11B1B"></a-box> -->
+                <a-cylinder position="0 0 -0.5" radius="0.6" rotation="0 90 90" height="0.2" color="#A11B1B"
+                    opacity="0.8"></a-cylinder>
                 <a-entity text="value: London After the Fire; color: white; wrapCount: 10; font:dejavu; align: center">
                 </a-entity>
             </a-entity>
 
-            <a-sphere color="#A11B1B" radius="0.5" position="-0.1 -0.2 -2.1" scale="0.5 0.5 0.5" theta-length="90"
+            <!-- <a-sphere color="#A11B1B" radius="0.5" position="-0.1 -0.2 -2.1" scale="0.5 0.5 0.5" theta-length="90"
                 opacity="0.9" segments-height="100" segments-width="100" wireframe="true"
                 animation__opa="property: material.opacity; from: 0; to: 0.5; dur: 500; loop: true; dir: alternate">
-            </a-sphere>
-            <a-cylinder color="#A11B1B" height="0.5" radius="0.01" position="-0.1 0.25 -2.1"></a-cylinder>
-            <a-entity class="st-paul" rotation="0 45 0" position="-0.1 0.8 -2.1" look-at="#camera" scale="0.7 0.7 0.7"
+            </a-sphere> -->
+            <!-- <a-cylinder color="#A11B1B" height="0.5" radius="0.01" position="-0.1 0.25 -2.1"></a-cylinder> -->
+            <a-entity class="st-paul" rotation="0 45 0" position="-0.1 0 -2.1" look-at="#camera" scale="0.7 0.7 0.7"
                 event-set__scale01="_event: mouseenter; scale: 1.2 1.2 1.2"
                 event-set__scale02="_event: mouseleave; scale: 0.5 0.5 0.5">
-                <a-box opacity="0.9" width="1" height="0.7" depth="0.01" position="0 0 -0.5" color="#A11B1B"></a-box>
+                <!-- <a-box opacity="0.9" width="1" height="0.7" depth="0.01" position="0 0 -0.5" color="#A11B1B"></a-box> -->
+                <a-cylinder position="0 0 -0.5" radius="0.6" rotation="0 90 90" height="0.2" color="#A11B1B"
+                    opacity="0.8"></a-cylinder>
                 <a-entity text="value: New St Paul Cathedral; color: white; wrapCount: 10; font:dejavu; align: center">
                 </a-entity>
             </a-entity>
 
-            <a-sphere color="#A11B1B" radius="0.5" position="1.50 -0.2 -1.45" scale="0.5 0.5 0.5" theta-length="90"
+            <!-- <a-sphere color="#A11B1B" radius="0.5" position="1.50 -0.2 -1.45" scale="0.5 0.5 0.5" theta-length="90"
                 opacity="0.9" segments-height="100" segments-width="100" wireframe="true"
                 animation__opa="property: material.opacity; from: 0; to: 0.5; dur: 500; loop: true; dir: alternate">
-            </a-sphere>
-            <a-cylinder color="#A11B1B" height="0.5" radius="0.01" position="1.50 0.25 -1.45"></a-cylinder>
-            <a-entity class="the-monument" rotation="0 45 0" position="1.50 0.8 -1.45" look-at="#camera"
+            </a-sphere> -->
+            <!-- <a-cylinder color="#A11B1B" height="0.5" radius="0.01" position="1.50 0.25 -1.45"></a-cylinder> -->
+            <a-entity class="the-monument" rotation="0 45 0" position="1.50 0 -1.45" look-at="#camera"
                 scale="0.7 0.7 0.7" event-set__scale01="_event: mouseenter; scale: 1.2 1.2 1.2"
                 event-set__scale02="_event: mouseleave; scale: 0.5 0.5 0.5">
-                <a-box opacity="0.9" width="1" height="0.5" depth="0.01" position="0 0 -0.5" color="#A11B1B"></a-box>
+                <!-- <a-box opacity="0.9" width="1" height="0.5" depth="0.01" position="0 0 -0.5" color="#A11B1B"></a-box> -->
+                <a-cylinder position="0 0 -0.5" radius="0.6" rotation="0 90 90" height="0.2" color="#A11B1B"
+                    opacity="0.8"></a-cylinder>
                 <a-entity text="value: The Monument; color: white; wrapCount: 10; font:dejavu; align: center">
                 </a-entity>
             </a-entity>
 
-            <a-sphere color="#A11B1B" radius="0.5" position="-3.5 -0.2 -0.7" scale="0.5 0.5 0.5" theta-length="90"
+            <!-- <a-sphere color="#A11B1B" radius="0.5" position="-3.5 -0.2 -0.7" scale="0.5 0.5 0.5" theta-length="90"
                 opacity="0.9" segments-height="100" segments-width="100" wireframe="true"
                 animation__opa="property: material.opacity; from: 0; to: 0.5; dur: 500; loop: true; dir: alternate">
-            </a-sphere>
-            <a-entity class="phoenix" rotation="0 45 0" position="-3.5 0.6 -0.7" look-at="#camera" scale="0.7 0.7 0.7"
+            </a-sphere> -->
+            <a-entity class="phoenix" rotation="0 45 0" position="-3.5 0 -0.7" look-at="#camera" scale="0.7 0.7 0.7"
                 event-set__scale01="_event: mouseenter; scale: 1.2 1.2 1.2"
                 event-set__scale02="_event: mouseleave; scale: 0.5 0.5 0.5">
-                <a-box opacity="0.9" width="1" height="1" depth="0.01" position="0 0 -0.5" color="#A11B1B"></a-box>
-                <a-image src="image/phoenix.jpg" width="1" height="1.333" opacity="1" position="0 1.2 -0.8"></a-image>
+                <!-- <a-box opacity="0.9" width="1" height="1" depth="0.01" position="0 0 -0.5" color="#A11B1B"></a-box> -->
+                <a-cylinder position="0 0 -0.5" radius="0.6" rotation="0 90 90" height="0.2" color="#A11B1B"
+                    opacity="0.8"></a-cylinder>
+                <!-- <a-image src="image/phoenix.jpg" width="1" height="1.333" opacity="1" position="0 1.2 -0.8"></a-image> -->
                 <a-entity text="value: Phoenix Fire Insurance Company; color: white; wrapCount: 10; font:dejavu; align: center">
                 </a-entity>
             </a-entity>
@@ -111,16 +118,18 @@
 
            
 
-            <a-sphere color="#A11B1B" radius="0.5" position="1.45 -0.2 -2" scale="0.5 0.5 0.5" theta-length="90"
+            <!-- <a-sphere color="#A11B1B" radius="0.5" position="1.45 -0.2 -2" scale="0.5 0.5 0.5" theta-length="90"
                 opacity="0.9" segments-height="100" segments-width="100" wireframe="true"
                 animation__opa="property: material.opacity; from: 0; to: 0.5; dur: 500; loop: true; dir: alternate">
-            </a-sphere>
-            <a-cylinder color="#A11B1B" height="0.5" radius="0.01" position="1.45 0.25 -2"></a-cylinder>
-            <a-entity class="sun-fire-office" rotation="0 45 0" position="1.45 0.8 -2" look-at="#camera"
+            </a-sphere> -->
+            <!-- <a-cylinder color="#A11B1B" height="0.5" radius="0.01" position="1.45 0.25 -2"></a-cylinder> -->
+            <a-entity class="sun-fire-office" rotation="0 45 0" position="1.45 0 -2" look-at="#camera"
                 scale="0.7 0.7 0.7" event-set__scale01="_event: mouseenter; scale: 1.2 1.2 1.2"
                 event-set__scale02="_event: mouseleave; scale: 0.5 0.5 0.5">
-                <a-box opacity="0.9" width="0.8" height="0.5" depth="0.01" position="0 0 -0.5" color="#A11B1B"></a-box>
-                <a-image src="image/Sun-insurance-company-firemark.jpg" width="1" height="1" opacity="1" position="0 0.75 -0.8"></a-image>
+                <!-- <a-box opacity="0.9" width="0.8" height="0.5" depth="0.01" position="0 0 -0.5" color="#A11B1B"></a-box> -->
+                <a-cylinder position="0 0 -0.5" radius="0.6" rotation="0 90 90" height="0.2" color="#A11B1B"
+                    opacity="0.8"></a-cylinder>
+                <!-- <a-image src="image/Sun-insurance-company-firemark.jpg" width="1" height="1" opacity="1" position="0 0.75 -0.8"></a-image> -->
                 <a-entity text="value: Sun Fire Office; color: white; wrapCount: 10; font:dejavu; align: center">
                 </a-entity>
             </a-entity>
